--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,55 @@ nav{
 .nav-middle .search-box img{
     width: 1.2em;
 }
+
+
+/* ---------------SIDEBAR------------- */
+
+
+.sidebar{
+    display: none;
+    background-color: #fff;
+    width: 13%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    padding-left: 2%;
+    padding-top: 7%;
+}
+.shortcut-links a img{
+    width: 1.4em;
+    margin-right: 1em;
+}
+.shortcut-links a{
+    display: flex;
+    align-items: center;
+    margin-bottom: 1.1em;
+    width: fit-content;
+    flex-wrap: wrap;
+}
+.shortcut-links a:first-child{
+    color: #ed3833;
+}
+.shortcut-links{
+    border-bottom: 0.01rem solid #ccc;
+}
+.subscribed-list h3{
+    font-size: 0.9em;
+    margin: 1em 0;
+    color: #5a5a5a;
+}
+.subscribed-list a{
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    flex-wrap: wrap;
+    margin-bottom: 0.8em;
+}
+.subscribed-list a img{
+    width: 1.4em;
+    border-radius: 50%;
+    margin-right: 1em;
+}
+.sidebar.active{
+    display: block;
+}
