--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ nav{
 
 
 .sidebar{
-    display: none;
     background-color: #fff;
     width: 13%;
     height: 100vh;
@@ -84,6 +83,9 @@ nav{
     margin-bottom: 1.1em;
     width: fit-content;
     flex-wrap: wrap;
+}
+.sidebar a:hover{
+    color: #c1b4b4;
 }
 .shortcut-links a:first-child{
     color: #ed3833;
@@ -110,4 +112,32 @@ nav{
 }
 .sidebar.active{
     display: block;
+}
+.small-sidebar{
+    width: 5%;
+}
+.small-sidebar a p{
+    display: none;
+}
+.small-sidebar h3{
+    display: none;
+}
+.small-sidebar .shortcut-links{
+    margin-bottom: 1em;
+    padding-bottom: 0.01em;
+    width:60% ;
+    border-bottom: 1px solid #c1b4b4;
+}
+
+/* ------------MAIN------------ */
+.container{
+    background-color: #f9f9f9;
+    padding: 1em 2% 1em 14% ;
+}
+.banner{
+    width: 100%;
+}
+.banner img{
+    width: 100%;
+    border-radius: 0.7em;
 }
