--- a/css/style.css
+++ b/css/style.css
@@ -110,9 +110,6 @@ nav{
     border-radius: 50%;
     margin-right: 1em;
 }
-.sidebar.active{
-    display: block;
-}
 .small-sidebar{
     width: 5%;
 }
@@ -134,10 +131,46 @@ nav{
     background-color: #f9f9f9;
     padding: 1em 2% 1em 14% ;
 }
+.large-container{
+    padding-left: 7%;
+}
 .banner{
     width: 100%;
 }
 .banner img{
     width: 100%;
     border-radius: 0.7em;
+}
+.list-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    row-gap: 30px;
+    column-gap: 16px;
+    margin-top: 15px;
+}
+.vid-list .thumbnail1{
+    width: 100%;
+    border-radius: 10px;
+}
+.vid-list .flex-div{
+    align-items: flex-start;
+    margin-top: 7px;
+}
+.vid-list .flex-div img{
+    width: 2.3em ;
+    border-radius: 50%;
+    margin-right: 0.8em;
+}
+.vid-info {
+    color: #5a5a5a;
+    font-size: 0.9em;
+}
+.vid-info a{
+    color: #000;
+    font-weight: 600;
+    display: block;
+    margin-bottom: 0.4em;
+}
+.vid-info p{
+
 }
