--- a/css/style.css
+++ b/css/style.css
@@ -211,3 +211,11 @@ nav{
         right: 0;
     }
 }
+
+
+
+
+/* ------------------Pay video page------------- */
+.play-container{
+    padding: 0 0 0 2%;
+}
