--- a/css/style.css
+++ b/css/style.css
@@ -219,3 +219,26 @@ nav{
 .play-container{
     padding: 0 0 0 2%;
 }
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap:wrap ;
+    margin-top: 2%;
+}
+.play-video{
+    flex-basis: 69%;
+}
+.rightSidebar{
+    flex-basis: 30%;
+}
+.play-video video{
+    width: 100%;
+}
+.side-video-list{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2em;
+}
+.side-video-list img{
+    width: 100%;
+}
