--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 *{
     padding: 0;
     margin: 0;
-    font-family: 'poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
 a{
@@ -22,7 +23,7 @@ header{
 }
 nav{
     /* border: 2px solid ; */
-    padding: 1em 2%;
+    padding: 1em 1%;
     justify-content: space-between;
     box-shadow: 0 0 1.6em rgba(0, 0, 0, 0.2);
     background-color: #fff;
@@ -169,9 +170,10 @@ nav{
 }
 .vid-info a{
     color: #000;
-    font-weight: 600;
+    font-weight: 400;
     display: block;
     margin-bottom: 0.4em;
+    letter-spacing: 0.05em;
 }
 @media screen and (max-width:900px){
     .menu-icon{
@@ -237,7 +239,7 @@ nav{
 .side-video-list{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 0.8em;
+    margin-bottom: 0.5em;
 }
 .side-video-list img{
     width: 100%;
