--- a/css/style.css
+++ b/css/style.css
@@ -250,3 +250,36 @@ nav{
 .side-video-list .vid-info{
     flex-basis: 49%;
 }
+.play-video .tags a{
+    color: #0000ff;
+    font-size: 1em;
+}
+.play-video h3{
+    font-weight:600;
+    font-size: 1.5em;
+    letter-spacing: 0.07em;
+}
+.play-video .play-video-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 10px;
+    font-size: 14px;
+    color: #5a5a5a;
+}
+.play-video .play-video-info a img{
+    width: 20px;
+    margin-right: 8px;
+}
+.play-video .play-video-info a {
+    display: inline-flex;
+    align-items: center;
+    margin-left: 15px;
+}
+.play-video hr{
+    border: 0;
+    height: 1px;
+    background: #ccc;
+    margin: 10px 0px;
+}
